<resources>
    <string name="app_name">MobileShop</string>

    <string name="action_edit_profile">Edit profile</string>
    <string name="action_logout">Logout</string>

    <string name="login_fragment_label">Authorization</string>
    <string name="register_fragment_label">Registration</string>
    <string name="profile_fragment_label">Profile</string>
    <string name="edit_profile_fragment_label">Edit Profile</string>
    <string name="game_page_fragment_label">Game Page</string>
    <string name="game_purchase_fragment_label">Purchase</string>

    <string name="user_id_value_name">userId</string>
    <string name="shared_preferences_name">appPref</string>

    <string name="auth_title">Sign In</string>
    <string name="register_title">Sign Up</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="first_name_title">First Name</string>
    <string name="last_name_title">Last Name</string>
    <string name="country_title">Country</string>
    <string name="city_title">City</string>
    <string name="game_title">Game</string>
    <string name="edit_profile_title">Edit</string>

    <string name="error_not_all_fields_are_filled">Not all fields are filled</string>
    <string name="error_cant_get_countries">Can\'t get countries</string>
    <string name="error_cant_get_cities">Can\'t get cities</string>
    <string name="error_cant_get_games">Can\'t get games</string>
    <string name="error_cant_get_game">Can\'t get game info</string>
    <string name="error_cant_register_user">Can\'t register user</string>
    <string name="error_cant_load_purchase_page">Can\'t load purchase page</string>
    <string name="error_cant_auth">Auth failed</string>
    <string name="error_cant_check_if_purchase_exists">Can\'t check if purchase already exists</string>
    <string name="error_cant_load_profile_image">Can\'t load image from phone</string>
    <string name="error_cant_save_profile_image">Can\'t save image on the server</string>
    <string name="error_cant_update_profile">Can\'t update profile</string>
    <string name="error_purchase_exists">Game already purchased</string>
    <string name="error_purchase_fail">Purchase failed\nTry again</string>

    <string name="success_register_user">User successfully registered</string>
    <string name="success_purchased">Game successfully purchased</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_username">USERNAME</string>
    <string name="nav_header_name">NAME</string>

    <string name="menu_shop">Shop</string>
    <string name="menu_profile">Profile</string>

    <string name="shop_item_game_title">Game title</string>
    <string name="shop_item_game_description">Game description</string>
    <string name="shop_item_game_genres">Game genres</string>
    <string name="shop_item_game_publisher">Game publisher</string>
    <string name="shop_item_game_price">Game price</string>
    <string name="shop_item_game_buy">Buy for %.2f ₽</string>

    <string name="game_purchase_card_mask">1111222233334444</string>
    <string name="game_purchase_date_mask">01/01</string>
    <string name="game_purchase_cvv_mask">123</string>
    <string name="game_purchase_button">PAY %.2f ₽</string>

    <string name="edit_profile_image_button">Change image</string>
    <string name="edit_profile_button">Save</string>

    <string name="profile_image_updated">Profile image updated successfully</string>
    <string name="profile_updated">Profile updated successfully</string>

    <string name="profile_full_name">%s %s</string>
</resources>