<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.shop.GamePageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/game_page_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/game_page_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_item_game_title"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/game_page_publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_item_game_publisher"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/game_page_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_item_game_genres"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/game_page_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="20dp"
            android:text="@string/shop_item_game_description"
            android:textSize="16sp"
            android:textStyle="italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/game_page_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_item_game_buy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</FrameLayout>