<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/shop_item_game_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/ic_menu_report_image" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/shop_item_game_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_item_game_title"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/shop_item_game_publisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_item_game_publisher" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/shop_item_game_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_item_game_genres"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toTopOf="@+id/shop_item_game_price"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/shop_item_game_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_item_game_price"
                        android:textStyle="bold|italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>